--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   x-copy:
-    image: athlord/x-copy
+    image: athlord/x-copy:1.0.0
     volumes:
       - ./files.yaml:/x-copy/files.yaml
       - ~/.aws:/root/.aws
